k8s/result-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
        - name: result
          image: dockersamples/examplevotingapp_result
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 20
            initialDelaySeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: result
spec:
  selector:
    app: result
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30001
  type: NodePort
